ei_add_test(clz)
ei_add_test(rand)
ei_add_test(meta)
ei_add_test(maxsizevector)
ei_add_test(numext)
ei_add_test(sizeof)
ei_add_test(dynalloc)
ei_add_test(noresize)
ei_add_test(first_aligned)
ei_add_test(type_alias)
ei_add_test(nullary)
ei_add_test(mixingtypes_novectorize)
ei_add_test(mixingtypes_vectorize)
ei_add_test(float_conversion)
ei_add_test(io)
ei_add_test(basicstuff)
ei_add_test(constexpr)
ei_add_test(constructor)
ei_add_test(linearstructure)
ei_add_test(integer_types)
ei_add_test(unalignedcount)
if(NOT EIGEN_TEST_NO_EXCEPTIONS AND NOT EIGEN_TEST_OPENMP)
  ei_add_test(exceptions)
endif()
ei_add_test(redux_matrix)
ei_add_test(redux_vector)
ei_add_test(visitor_matrix)
ei_add_test(visitor_vector)
ei_add_test(block_basic)
ei_add_test(block_extra)
ei_add_test(corners)
ei_add_test(symbolic_index)
ei_add_test(indexed_view)
ei_add_test(reshape)
ei_add_test(swap)
ei_add_test(resize)
ei_add_test(no_automatic_resizing)
ei_add_test(conservative_resize)
ei_add_test(diagonalmatrices)
ei_add_test(diagonalview)
ei_add_test(skew_symmetric_matrix3)
ei_add_test(adjoint)
ei_add_test(diagonal)
ei_add_test(miscmatrices)
ei_add_test(commainitializer)
ei_add_test(smallvectors)
ei_add_test(mapped_matrix)
ei_add_test(mapstride)
ei_add_test(unaryview)
ei_add_test(mapstaticmethods)
ei_add_test(array_cwise_operations)
ei_add_test(array_cwise_operations_int)
ei_add_test(array_cwise_real)
ei_add_test(array_cwise_math)
ei_add_test(array_cwise_bitwise)
ei_add_test(array_cwise_cast)
ei_add_test(matrix_cwise)
ei_add_test(array_for_matrix)
ei_add_test(array_replicate)
ei_add_test(array_reverse)
ei_add_test(ref)
ei_add_test(is_same_dense)
ei_add_test(triangular)
ei_add_test(selfadjoint)
ei_add_test(nesting_ops_lazy "${CMAKE_CXX_FLAGS_DEBUG}")
ei_add_test(nesting_ops_eval "${CMAKE_CXX_FLAGS_DEBUG}")
ei_add_test(nestbyvalue)
ei_add_test(zerosized)
ei_add_test(dontalign)
ei_add_test(evaluators)
if(NOT EIGEN_TEST_NO_EXCEPTIONS)
  ei_add_test(sizeoverflow)
endif()
ei_add_test(stable_norm)
ei_add_test(permutationmatrices)
ei_add_test(bandmatrix)
ei_add_test(vectorwiseop)
ei_add_test(special_numbers)
ei_add_test(rvalue_types)
ei_add_test(dense_storage)
ei_add_test(ctorleak)
ei_add_test(array_of_string)
ei_add_test(num_dimensions)
ei_add_test(stl_iterators)
ei_add_test(initializer_list_construction)
ei_add_test(diagonal_matrix_variadic_ctor)
ei_add_test(serializer)
ei_add_test(tuple_test)
ei_add_test(realview_dynamic_real)
ei_add_test(realview_dynamic_cplxfloat)
ei_add_test(realview_dynamic_cplxdouble)
ei_add_test(realview_fixed_real)
ei_add_test(realview_fixed_complex)
ei_add_test(realview_edge_cases)
ei_add_test(fastmath "${EIGEN_FASTMATH_FLAGS}")

add_executable(bug1213 bug1213.cpp bug1213_main.cpp)
target_link_libraries(bug1213 Eigen3::Eigen)
target_include_directories(bug1213 PRIVATE ${PROJECT_SOURCE_DIR}/test)

if(Boost_FOUND)
  ei_add_test(boostmultiprec_cholesky "" "${Boost_LIBRARIES}")
  ei_add_test(boostmultiprec_lu_qr "" "${Boost_LIBRARIES}")
  ei_add_test(boostmultiprec_svd "" "${Boost_LIBRARIES}")
endif()

add_subdirectory(Arch)
add_subdirectory(Products)
