set_property(GLOBAL PROPERTY EIGEN_CURRENT_SUBPROJECT "Unsupported")
add_custom_target(BuildUnsupported)

include_directories(../../test ../../unsupported
                    ${CMAKE_CURRENT_BINARY_DIR}/../../test)

find_package (Threads)

find_package(GoogleHash)
if(GoogleHash_FOUND)
  add_definitions("-DEIGEN_GOOGLEHASH_SUPPORT")
  include_directories(${GOOGLEHASH_INCLUDES})
  ei_add_property(EIGEN_TESTED_BACKENDS  "GoogleHash, ")
else()
  ei_add_property(EIGEN_MISSING_BACKENDS  "GoogleHash, ")
endif()

add_subdirectory(AdolcForward)
add_subdirectory(NonLinearOptimization)
add_subdirectory(NumericalDiff)
add_subdirectory(AutoDiff)
add_subdirectory(BVH)
add_subdirectory(MatrixFunctions)
add_subdirectory(AlignedVector3)
add_subdirectory(FFT)
add_subdirectory(EulerAngles)
add_subdirectory(MPRealSupport)
add_subdirectory(NNLS)
add_subdirectory(SparseExtra)
add_subdirectory(OpenGLSupport)
add_subdirectory(Polynomials)
add_subdirectory(Splines)
add_subdirectory(IterativeSolvers)
add_subdirectory(LevenbergMarquardt)
add_subdirectory(KroneckerProduct)
add_subdirectory(SpecialFunctions)
add_subdirectory(Tensor)
